--- a/src/app/solution-screen/solution-screen.component.css
+++ b/src/app/solution-screen/solution-screen.component.css
@@ -1,7 +1,8 @@
 p {
+  margin-top: 0;
+  margin-bottom: 0;
   text-align: right;
   color: seagreen;
-  margin-bottom: 0;
   font-size: 4vw;
   padding-left: 2%;
   padding-right: 2%;
